@@ -11,6 +11,7 @@ ENH: Uses uncompressed javascript in debug mode. (Wei)
 ENH: Cells in TDataGrid rows can now be accessed via the corresponding column IDs (Qiang)
 ENH: Input controls in some datagrid columns can now be accessed in a named fashion (Qiang)
 ENH: Prado::fatalError() now displays function parameter information (Qiang)
+CHG: Ticket#356 - TLabel will not render if its associated control is invisible (Qiang)
 CHG: Validator the error message visibility before raising events OnError and OnSuccess (Wei)
 CHG: Unify all client-side javascript event handler syntax. (Wei)
 CHG: Added more conditions in the requirement checker (Qiang)
